# MADTraC

./: .gitignore  .svnignore  CMakeLists.txt  Makefile  README  README.VS2010  README.md  VS2008Notes.txt
MADTraC.VS2010/: MADTraC.VS2010.sln
MADTraC.VS2010/MT (all)/: MT (all).vcxproj  MT (all).vcxproj.filters
MADTraC.VS2010/MT_Core/: MT_Core.vcxproj  MT_Core.vcxproj.filters
MADTraC.VS2010/MT_GUI/: MT_GUI.vcxproj  MT_GUI.vcxproj.filters
MADTraC.xcodeproj/: dan.mode1v3  project.pbxproj
MT/: MT.h  MT_Config.h.in
MT/MT_Core/: CMakeLists.txt  MT_Core.h
MT/MT_Core/fileio/: CLFSupport.cpp  CLFSupport.h  ExperimentDataFile.cpp  ExperimentDataFile.h  MovieExporter.cpp  MovieExporter.h  ParticleFile.cpp  ParticleFile.h  XMLSupport.cpp  XMLSupport.h
MT/MT_Core/gl/: glImageSupport.cpp  glImageSupport.h  glSupport.cpp  glSupport.h
MT/MT_Core/primitives/: BoundingBox.cpp  BoundingBox.h  BufferAgent.cpp  BufferAgent.h  Choice.cpp  Choice.h  Color.cpp  Color.h  DataGroup.cpp  DataGroup.h  Matrix.cpp  Matrix.h  R3.cpp  R3.h  Rectangle.cpp  Rectangle.h  agent.cpp  agent.h  ringbuffer.cpp  ringbuffer.h
MT/MT_Core/support/: BiCC.cpp  BiCC.h  OpenCVmath.cpp  OpenCVmath.h  UKF.cpp  UKF.h  filesupport.cpp  filesupport.h  kbsupport.cpp  kbsupport.h  mathsupport.cpp  mathsupport.h  stringsupport.cpp  stringsupport.h
MT/MT_GUI/: CMakeLists.txt  MT_GUI.h
MT/MT_GUI/base/: MT_AppBase.cpp  MT_AppBase.h  MT_CameraSlaveFrame.cpp  MT_CameraSlaveFrame.h  MT_ControlFrameBase.cpp  MT_ControlFrameBase.h  MT_FrameBase.cpp  MT_FrameBase.h
MT/MT_GUI/dialogs/: MT_DataDialogs.cpp  MT_DataDialogs.h  MT_DialogManagement.cpp  MT_DialogManagement.h  MT_MovieExporterDialog.cpp  MT_MovieExporterDialog.h  MT_NumericInputDialog.cpp  MT_NumericInputDialog.h  MT_ParameterDialog.cpp  MT_ParameterDialog.h  MT_XDFDialogs.cpp  MT_XDFDialogs.h
MT/MT_GUI/server/: MT_Client.cpp  MT_Client.h  MT_Server.cpp  MT_Server.h  MT_ServerModules.cpp  MT_ServerModules.h
MT/MT_GUI/support/: Sequence.cpp  Sequence.h  wxSupport.cpp  wxSupport.h  wxXMLSupport.cpp  wxXMLSupport.h
MT/MT_Robot/: CMakeLists.txt  MT_Robot.h
MT/MT_Robot/base/: MT_RobotFrameBase.cpp  MT_RobotFrameBase.h
MT/MT_Robot/dialogs/: MT_JoyStickFrame.cpp  MT_JoyStickFrame.h  MT_RobotCommandDialog.cpp  MT_RobotCommandDialog.h  MT_RobotConnectDialog.cpp  MT_RobotConnectDialog.h
MT/MT_Robot/io/: COMSequence.cpp  COMSequence.h  ComIO.cpp  ComIO.h  gamepad.cpp  gamepad.h
MT/MT_Robot/robot/: AllRobotContainer.cpp  AllRobotContainer.h  GamePadController.cpp  GamePadController.h  MiaBotPro.cpp  MiaBotPro.h  RobotBase.cpp  RobotBase.h  SteeredRobot.cpp  SteeredRobot.h
MT/MT_Tracking/: CMakeLists.txt  MT_Tracking.h
MT/MT_Tracking/base/: MT_TrackerBase.cpp  MT_TrackerBase.h  MT_TrackerFrameBase.cpp  MT_TrackerFrameBase.h
MT/MT_Tracking/capture/: MT_AVTCameraDialog.cpp  MT_AVTCameraDialog.h  MT_Capture.cpp  MT_Capture.h  MT_Capture_Interfaces.cpp  MT_Capture_Interfaces.h
MT/MT_Tracking/cv/: GSThresholder.cpp  GSThresholder.h  MT_BlobExtras.cpp  MT_BlobExtras.h  MT_CalibrationDataFile.cpp  MT_CalibrationDataFile.h  MT_HungarianMatcher.cpp  MT_HungarianMatcher.h  MT_MakeBackgroundFrame.cpp  MT_MakeBackgroundFrame.h
MT/MT_Tracking/dialogs/: MT_CameraSlaveFrame.cpp  MT_CameraSlaveFrame.h  MT_CreateBackgroundDialog.cpp  MT_CreateBackgroundDialog.h
MT/MT_Tracking/trackers/DS/: DSGYA_Segmenter.cpp  DSGYA_Segmenter.h  DSGYBlobber.cpp  DSGYBlobber.h
MT/MT_Tracking/trackers/GY/: GYBlobber.cpp  GYBlobber.h  GYBlobs.cpp  GYBlobs.h  GYSegmenter.cpp  GYSegmenter.h  MixGaussians.cpp  MixGaussians.h
MT/MT_Tracking/trackers/YA/: YABlobber.cpp  YABlobber.h  YASegmenter.cpp  YASegmenter.h
apps/BackgroundCreator/: CMakeLists.txt
apps/BackgroundCreator/src/: BackgroundCreator.cpp
apps/CameraUtility/: CMakeLists.txt
apps/CameraUtility/Camera Utility.VS2010/: Camera Utility.VS2010.sln
apps/CameraUtility/Camera Utility.VS2010/Camera Utility/: Camera Utility.vcxproj  Camera Utility.vcxproj.filters
apps/CameraUtility/Camera Utility.xcodeproj/: project.pbxproj
apps/CameraUtility/src/: CameraUtility.cpp  CameraUtility.h
apps/PlaySwarm/: CMakeLists.txt  Info.plist.in  PlaySwarm-Info.plist  README
apps/PlaySwarm/PlaySwarm.VS2010/: PlaySwarm.VS2010.sln
apps/PlaySwarm/PlaySwarm.VS2010/PlaySwarm/: PlaySwarm.vcxproj  PlaySwarm.vcxproj.filters
apps/PlaySwarm/PlaySwarm.xcodeproj/: project.pbxproj
apps/PlaySwarm/resources/: PlaySwarm.icns  PlaySwarmCheatSheet.txt  PlaySwarmUsage.txt  Readme-PlaySwarmOSX.txt  clf.icns
apps/PlaySwarm/src/: Occlusion.cpp  Occlusion.h  PlaySwarm.cpp  PlaySwarm.h
apps/RobotUtility/: CMakeLists.txt
apps/RobotUtility/Robot Utility.VS2010/: Robot Utility.VS2010.sln
apps/RobotUtility/Robot Utility.VS2010/Robot Utility/: Robot Utility.vcxproj  Robot Utility.vcxproj.filters
apps/RobotUtility/Robot Utility.xcodeproj/: project.pbxproj
apps/RobotUtility/src/: RobotUtility.cpp  RobotUtility.h
cmake/: MT_BuildFunctions.cmake  MT_Config.cmake  MT_Exports.cmake.in
dev/: YASegmenter.cpp
docs/: README.DOCS
matlab/: LoadXDFDataFileByName.m  ReadXDF.m  showinPlaySwarm.m
samples/SampleTrackerGY/: CMakeLists.txt  Info.plist.in
samples/SampleTrackerGY/SampleTrackerGY.xcodeproj/: project.pbxproj
samples/SampleTrackerGY/resources/: Segmenter.icns
samples/SampleTrackerGY/src/: SampleTrackerGY.cpp  SampleTrackerGY.h
samples/SimpleBWTracker/: CMakeLists.txt
samples/SimpleBWTracker/matlab/: SampleClient.m
samples/SimpleBWTracker/src/: SimpleBWTracker.cpp  SimpleBWTracker.h
test/: CMakeLists.txt
test/src/: MT_Test.h  MT_TestApp.h  MT_wxTest.h
test/src/MT_Core/fileio/: test_ExperimentDataFile.cpp
test/src/MT_Core/primitives/: test_BoundingBox.cpp
test/src/MT_Core/support/: test_OpenCVmath.cpp  test_UKF.cpp  test_filesupport.cpp  test_stringsupport.cpp
test/src/MT_GUI/server/: test_Client.cpp  test_Server.cpp
test/src/MT_GUI/support/: test_Sequence.cpp  test_wxSupport.cpp
test/src/MT_Robot/io/: test_COMSequence.cpp
test/src/nonCTest/: testXDF.cpp
testdata/: README.TESTDATA
web/: index.html
(+53 files in other folders)
